# project-travel

./: .gitignore  my_db.session.sql
backend/: .env.example  main.py  pyproject.toml
backend/src/: app.py  db.py  kakao_maps.py  llm.py  models.py  openapi.py  seed_data.py
backend/src/script/: app.sql  table_check.sql
docs/: FRONTEND_PLAN.md  PRD(수정본).md  backend_checklist.md
docs/backend_docs/: backend_checklist.md  file_and_function_guide.md  request_flow_sequence.md  tourapi.md
docs/frontend_docs/: frontend_plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  components.css  index.css  main.jsx
frontend/src/components/: BackgroundSlider.css  BackgroundSlider.jsx  CalendarView.css  CalendarView.jsx  DateRangePicker.css  DateRangePicker.jsx  HeroText.jsx  InputForm.jsx  KakaoMap.jsx  Loading.css  Loading.jsx  LocationModal.css  LocationModal.jsx  MapLocationModal.css  MapLocationModal.jsx  Navbar.css  Navbar.jsx  RecommendationCard.jsx  ResultsDisplay.jsx  TravelCard.jsx  TravelInput.jsx  YearScroller.css
frontend/src/pages/: Home.jsx  Result.css  Result.jsx
frontend/src/styles/: variables.css
